check_output_final.txt
    Checking twister v0.5.0 (C:\Users\pixel\Downloads\twister)
error[E0432]: unresolved import `burn::tensor::Data`
 --> src\ml\pointnet_encoder.rs:3:20
  |
3 | use burn::tensor::{Data, Distribution, Tensor, TensorData};
  |                    ^^^^ no `Data` in `tensor`
  |
  = help: consider importing one of these items instead:
          cpal::Data
          serde_json::error::Category::Data

error: cannot find derive macro `Module` in this scope
  --> src\ml\point_mamba.rs:39:10
   |
39 | #[derive(Module, Debug)]
   |          ^^^^^^
   |
help: the derive macro `Module` accepts the similarly named `module` attribute
   |
39 - #[derive(Module, Debug)]
39 + #[derive(module, Debug)]
   |
help: consider importing this derive macro
   |
11 + use burn::module::Module;
   |

warning: unused imports: `Distribution` and `TensorData`
 --> src\ml\pointnet_encoder.rs:3:26
  |
3 | use burn::tensor::{Data, Distribution, Tensor, TensorData};
  |                          ^^^^^^^^^^^^          ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Distribution` and `TensorData`
 --> src\ml\mamba_block.rs:2:38
  |
2 | use burn::tensor::{backend::Backend, Distribution, Tensor, TensorData};
  |                                      ^^^^^^^^^^^^          ^^^^^^^^^^

warning: unused imports: `Distribution` and `TensorData`
 --> src\ml\point_decoder.rs:3:20
  |
3 | use burn::tensor::{Distribution, Tensor, TensorData};
  |                    ^^^^^^^^^^^^          ^^^^^^^^^^

warning: unused imports: `Tensor` and `backend::Backend`
  --> src\ml\point_mamba_trainer.rs:13:20
   |
13 | use burn::tensor::{Tensor, backend::Backend};
   |                    ^^^^^^  ^^^^^^^^^^^^^^^^

warning: unused import: `std::error::Error`
  --> src\ml\point_mamba_trainer.rs:15:5
   |
15 | use std::error::Error;
   |     ^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> src\async_event_handler.rs:161:28
    |
161 |                     if let Err(e) = kernel.dispatch_autonomous_batch() {
    |                            ^^^^^^   ---------------------------------- this expression has type `()`
    |                            |
    |                            expected `()`, found `Result<_, _>`
    |
    = note: expected unit type `()`
                    found enum `std::result::Result<_, _>`

error[E0308]: mismatched types
   --> src\async_event_handler.rs:198:29
    |
197 |                         match kernel.read_results() {
    |                               --------------------- this expression has type `&[DispatchResultVBuffer]`
198 |                             Ok(results) => {
    |                             ^^^^^^^^^^^ expected `[DispatchResultVBuffer]`, found `Result<_, _>`
    |
    = note: expected slice `[DispatchResultVBuffer]`
                found enum `std::result::Result<_, _>`

error[E0308]: mismatched types
   --> src\async_event_handler.rs:244:29
    |
197 |                         match kernel.read_results() {
    |                               --------------------- this expression has type `&[DispatchResultVBuffer]`
...
244 |                             Err(e) => {
    |                             ^^^^^^ expected `[DispatchResultVBuffer]`, found `Result<_, _>`
    |
    = note: expected slice `[DispatchResultVBuffer]`
                found enum `std::result::Result<_, _>`

error[E0308]: mismatched types
  --> src\ml\mamba_block.rs:58:22
   |
58 |         original.add(&output)
   |                  --- ^^^^^^^ expected `Tensor<B, 3>`, found `&Tensor<B, 3>`
   |                  |
   |                  arguments to this method are incorrect
   |
   = note: expected struct `burn::Tensor<_, _>`
           found reference `&burn::Tensor<_, _>`
note: method defined here
  --> C:\Users\pixel\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\burn-tensor-0.21.0-pre.2\src\tensor\api\numeric.rs:43:12
   |
43 |     pub fn add(self, other: Self) -> Self {
   |            ^^^
help: consider removing the borrow
   |
58 -         original.add(&output)
58 +         original.add(output)
   |

error[E0308]: mismatched types
   --> src\ml\point_mamba.rs:102:36
    |
102 |             output = block.forward(output);
    |                            ------- ^^^^^^ expected `&Tensor<B, 3>`, found `Tensor<B, 3>`
    |                            |
    |                            arguments to this method are incorrect
    |
    = note: expected reference `&burn::Tensor<_, _>`
                  found struct `burn::Tensor<_, _>`
note: method defined here
   --> src\ml\mamba_block.rs:33:12
    |
 33 |     pub fn forward(&self, input: &Tensor<B, 3>) -> Tensor<B, 3> {
    |            ^^^^^^^        --------------------
help: consider borrowing here
    |
102 |             output = block.forward(&output);
    |                                    +

warning: unused variable: `r`
   --> src\analysis_mock_data.rs:321:13
    |
321 |         let r = 1.0;
    |             ^ help: if this is intentional, prefix it with an underscore: `_r`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `sample_rate`
   --> src\features\audio.rs:330:47
    |
330 | fn extract_bispectrum_anomaly(buffer: &[f32], sample_rate: f32) -> Vec<f32> {
    |                                               ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_sample_rate`

warning: unused variable: `model`
   --> src\ml\wav2vec2_loader.rs:111:5
    |
111 |     model: &Wav2Vec2Model<Wgpu>,
    |     ^^^^^ help: if this is intentional, prefix it with an underscore: `_model`

warning: unused variable: `device`
   --> src\ml\wav2vec2_loader.rs:114:5
    |
114 |     device: &<Wgpu as Backend>::Device,
    |     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_device`

warning: unused variable: `n_points`
  --> src\ml\pointnet_encoder.rs:44:14
   |
44 |         let [n_points, _n_features] = points.dims();
   |              ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_n_points`

warning: unused variable: `n_out`
  --> src\ml\pointnet_encoder.rs:70:14
   |
70 |         let [n_out, d_out] = features.dims();
   |              ^^^^^ help: if this is intentional, prefix it with an underscore: `_n_out`

warning: unused variable: `n_points`
  --> src\ml\point_decoder.rs:53:14
   |
53 |         let [n_points, _n_features] = features.dims();
   |              ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_n_points`

warning: unused variable: `n_out`
  --> src\ml\point_decoder.rs:79:14
   |
79 |         let [n_out, d_out] = offsets.dims();
   |              ^^^^^ help: if this is intentional, prefix it with an underscore: `_n_out`

warning: variable does not need to be mutable
   --> src\visualization\ray_tracer.rs:271:9
    |
271 |     let mut delays_ms: Vec<f32> = all_rays.iter().map(|(_, _, d, _)| *d).collect();
    |         ----^^^^^^^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src\visualization\ray_tracer.rs:276:9
    |
276 |     let mut reflection_delays_32 = histogram_delays(&delays_ms, DELAY_BIN_COUNT);
    |         ----^^^^^^^^^^^^^^^^^^^^
    |         |
    |         help: remove this `mut`

Some errors have detailed explanations: E0308, E0432.
For more information about an error, try `rustc --explain E0308`.
warning: `twister` (lib) generated 15 warnings
error: could not compile `twister` (lib) due to 7 previous errors; 15 warnings emitted
